log
Thu May 12 12:02:28 HSP 2022: 
 tests:  0|5
total_score: 0/70
5a929c5
Thu May 12 12:16:34 HSP 2022: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:62:11: error: statement with no effect [-Werror=unused-value]
           for (newValue; newValue < 9; newValue++)
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
afdaca2
Thu May 12 12:17:06 HSP 2022: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a5f9912
Thu May 12 12:17:52 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0026945
Thu May 12 19:34:23 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
839f10d
Thu May 12 19:36:15 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:65:17: error: the address of 'is_valid' will always evaluate as 'true' [-Werror=address]
             if (is_valid)
                 ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ad49126
Thu May 12 19:36:29 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:65:26: error: comparison between pointer and integer [-Werror]
             if (is_valid == 1)
                          ^~
cc1.exe: all warnings being treated as errors
Compilation failed
8fd5cc2
Thu May 12 19:36:43 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
51822a9
Thu May 12 19:45:01 HSP 2022: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
10e4cf7
Thu May 12 19:45:49 HSP 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
426a250
Thu May 12 19:48:01 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7194c54
Thu May 12 20:12:04 HSP 2022: 
 sudoku.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:50:9: error: unused variable 'submatriz' [-Werror=unused-variable]
     int submatriz[10] = {0,0,0,0,0,0,0,0,0,0};
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2fb3de8
